fix overflow css

--- a/src/app/components/timetable/timetable.component.css
+++ b/src/app/components/timetable/timetable.component.css
@@ -602,6 +602,10 @@
 
 .staff-info {
   float: left;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  width: 200px;
 }
 
 .action-location {
